tests/baselines/reference/unusedMultipleParameters1InFunctionDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters1InFunctionDeclaration.ts(2,18): error TS6134: Parameter 'person' has never been used.
tests/cases/compiler/unusedMultipleParameters1InFunctionDeclaration.ts(3,9): error TS6133: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedMultipleParameters1InFunctionDeclaration.ts (2 errors) ====
    
    function greeter(person: string, person2: string) {
                     ~~~~~~~~~~~~~~
!!! error TS6134: Parameter 'person' has never been used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: Variable 'unused' has never been used.
        person2 = "dummy value";
    }